# rsrpp

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  compose.yml  output.json.json  rustfmt.toml
.circleci/: config.yml
rsrpp/: Cargo.toml  README.md  build.sh
rsrpp-cli/: Cargo.toml  README.md  build.rs
rsrpp-cli/src/: loggers.rs  main.rs
rsrpp/src/: cleaner.rs  config.rs  converter.rs  extracter.rs  lib.rs  llm.rs  models.rs  parser.rs  test_utils.rs
rsrpp/src/parser/: mod.rs  structs.rs  tests.rs
src/: lib.rs
src/parser/: mod.rs  structs.rs  tests.rs
