[workspace]
resolver = "2"
members = ["rsrpp", "rsrpp-cli"]

[workspace.package]
authors = ["akitenkrad"]
edition = "2021"
version = "1.0.15"
description = "A Rust project for research paper pdf."
repository = "https://github.com/akitenkrad/rsrpp.git"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }

[workspace.metadata.release]
tag-prefix = ""
