[workspace]
resolver = "2"
members = ["rsrpp", "rsrpp-cli"]

[workspace.package]
authors = ["akitenkrad"]
edition = "2021"
version = "1.0.17"
description = "A Rust project for research paper pdf."
repository = "https://github.com/akitenkrad/rsrpp.git"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
chrono = "0.4.41"
glob = "0.3.3"
indicatif = "0.18.0"
opencv = "0.95.1"
quick-xml = "0.38.3"
rand = "0.9.2"
regex = "1.11.2"
reqwest = "0.12.23"
sci-rs = "0.4.1"
scraper = "0.24.0"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
clap = { version = "4.5.46", features = ["derive"] }
futures = "0.3.31"
strum = { version = "0.27.2", features = ["derive"] }
test-log = { version = "0.2.18", features = ["trace"] }

[workspace.metadata.release]
tag-prefix = ""
