[workspace]
resolver = "2"
members = ["rsrpp", "rsrpp-cli"]

[workspace.package]
authors = ["akitenkrad"]
edition = "2021"
version = "1.0.24"
description = "A Rust project for research paper pdf."
repository = "https://github.com/akitenkrad/rsrpp.git"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
chrono = "0.4.42"
glob = "0.3.3"
indicatif = "0.18.3"
opencv = "0.98.1"
quick-xml = "0.38.4"
rand = "0.9.2"
regex = "1.12.2"
reqwest = "0.13.1"
sci-rs = "0.4.1"
scraper = "0.25.0"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
clap = { version = "4.5.54", features = ["derive"] }
futures = "0.3.31"
strum = { version = "0.27.2", features = ["derive"] }
test-log = { version = "0.2.19", features = ["trace"] }
openai-tools = "1.0.4"
base64 = "0.22"

[workspace.metadata.release]
tag-prefix = ""
