[package]
name = "rsrpp-cli"
version = "1.0.14"
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "rsrpp"
path = "src/main.rs"

[dependencies]
rsrpp = { path = "../rsrpp", version = "1.0.13" }
clap = { version = "4.5.21", features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true

[package.metadata.release]
tag = true
