[package]
name = "rsrpp-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "rsrpp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
rsrpp = { path = "../rsrpp", version = ">=1.0.13" }
clap = { version = "4.5.21", features = ["derive"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
serde_json.workspace = true
tokio.workspace = true

[package.metadata.release]
tag = true
