[package]
name = "rsrpp-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "rsrpp"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
rsrpp = { path = "../rsrpp", version = ">=1.0.13" }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[package.metadata.release]
tag = true
