[package]
name = "rsrpp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
chrono = "0.4.38"
glob = "0.3.1"
opencv = "0.93.4"
quick-xml = "0.37.0"
rand = "0.8.5"
regex = "1.11.1"
reqwest = "0.12.9"
sci-rs = "0.4.1"
scraper = "0.22.0"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[package.metadata.release]
tag = false
