[package]
name = "rsrpp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
chrono = "0.4.38"
glob = "0.3.1"
indicatif = "0.17.9"
opencv = "0.94.4"
quick-xml = "0.37.0"
rand = "0.9.1"
regex = "1.11.1"
reqwest = "0.12.9"
sci-rs = "0.4.1"
scraper = "0.23.0"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[package.metadata.release]
tag = false
