[package]
name = "rsrpp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
glob = { workspace = true }
indicatif = { workspace = true }
opencv = { workspace = true }
quick-xml = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
sci-rs = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
strum = { workspace = true }
test-log = { workspace = true }

[package.metadata.release]
tag = false
